--- a/default.yaml
+++ b/default.yaml
@@ -6,11 +6,10 @@ server:
   readTimeout: 10     # 读等待时间，单位: 秒
   writeTimeout: 10    # 写等待时间，单位: 秒
 log:
-  path: ./logs        # 日志目录, 不要在最后加/
+  path: ./logs        # 日志目录
   bizMaxAge: 7        # 指定保留多少天的业务日志
-  bizErrMaxAge: 7     # 指定保留多少天的业务错误日志
+  lowLevel: debug     # 业务日志最低级别：debug、info、warn、error
   callMaxAge: 7       # 指定保留多少天的请求日志
-  minLevel: debug     # 日志级别：debug、info、warn、error
 mysql:
   MYSQLKEY:
     host: 127.0.0.1
