--- a/default.yaml
+++ b/default.yaml
@@ -6,7 +6,7 @@ server:
   readTimeout: 10     # 读等待时间，单位: 秒
   writeTimeout: 10    # 写等待时间，单位: 秒
 log:
-  path: ./storage/logs        # 日志目录
+  path: ./logs        # 日志目录
   lowLevel: 0     # 业务日志最低级别：-1:debug、0:info、1:warn、2:error
 mysql:
   MYSQLKEY:
