--- a/.env.development
+++ b/.env.development
@@ -7,3 +7,10 @@ APP_WRITE_TIMEOUT = 10  # 写等待时间，单位：秒
 # 日志
 LOG_PATH = .
 LOG_LOW_LEVEL = -1      # 业务日志最低级别：-1:debug、0:info、1:warn、2:error
+
+# Mysql-localhost
+DB_CORE_RW_HOST = 127.0.0.1
+DB_CORE_RW_PORT = 3306
+DB_DATABASE_RESOURCES = blog
+DB_CORE_RW_USERNAME = root
+DB_CORE_RW_PASSWORD = password
