--- a/.env.development
+++ b/.env.development
@@ -14,3 +14,8 @@ DB_CORE_RW_PORT = 3306
 DB_DATABASE_RESOURCES = blog
 DB_CORE_RW_USERNAME = root
 DB_CORE_RW_PASSWORD = password
+
+# Redis-localhost
+REDIS_LOCALHOST_RW_HOST=127.0.0.1
+REDIS_LOCALHOST_RW_PASSWORD=
+REDIS_LOCALHOST_RW_PORT=6379
