运行环境默认为release

--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
 # 服务配置
 APP_NAME = ego-layout
-APP_ENV = debug         # debug/test/release
+APP_ENV = release         # debug/test/release
 APP_READ_TIMEOUT = 10   # 读等待时间，单位：秒
 APP_WRITE_TIMEOUT = 10  # 写等待时间，单位：秒
 
