--- a/.env.development
+++ b/.env.development
@@ -5,7 +5,7 @@ APP_READ_TIMEOUT = 10   # 读等待时间，单位：秒
 APP_WRITE_TIMEOUT = 10  # 写等待时间，单位：秒
 
 # 日志
-LOG_PATH = .
+LOG_PATH = ./storage/logs
 LOG_LOW_LEVEL = -1      # 业务日志最低级别：-1:debug、0:info、1:warn、2:error
 
 # Mysql-localhost
