--- a/.env.develop
+++ b/.env.develop
@@ -1,6 +1,6 @@
 # 服务配置
 APP_NAME = ego-layout
-APP_ENV = release         # debug/test/release
+APP_ENV = production       # develop/test/production
 APP_READ_TIMEOUT = 10   # 读等待时间，单位：秒
 APP_WRITE_TIMEOUT = 10  # 写等待时间，单位：秒
 
