--- a/.env.develop
+++ b/.env.develop
@@ -8,6 +8,7 @@ APP_WRITE_TIMEOUT = 10  # 写等待时间，单位：秒
 LOG_PATH = ./storage/logs
 LOG_LOW_LEVEL = 0      # 业务日志最低级别：-1:debug、0:info、1:warn、2:error
 LOG_ENCODER_JSON = false     # 是否为josn日志格式
+GORM_SLOW_LOG_THRESHOLD = 100   # gorm慢日志记录阈值，单位为毫秒
 
 # Mysql-localhost
 DB_CORE_RW_HOST = 127.0.0.1
