架构调整，API和异步服务拆分

--- a/.env.development
+++ b/.env.development
@@ -1,13 +1,13 @@
 # 服务配置
 APP_NAME = ego-layout
-APP_ENV = production       # development/test/production
-APP_READ_TIMEOUT = 10   # 读等待时间，单位：秒
-APP_WRITE_TIMEOUT = 10  # 写等待时间，单位：秒
+APP_ENV = production            # development/test/production
+APP_READ_TIMEOUT = 10           # 读等待时间，单位：秒
+APP_WRITE_TIMEOUT = 10          # 写等待时间，单位：秒
 
 # 日志
 LOG_PATH = ./storage/logs
-LOG_LOW_LEVEL = 0      # 业务日志最低级别：-1:debug、0:info、1:warn、2:error
-LOG_ENCODER_JSON = false     # 是否为josn日志格式
+LOG_LOW_LEVEL = 0               # 业务日志最低级别：-1:debug、0:info、1:warn、2:error
+LOG_ENCODER_JSON = true         # 是否为josn日志格式
 GORM_SLOW_LOG_THRESHOLD = 100   # gorm慢日志记录阈值，单位为毫秒
 
 # 异步任务配置
@@ -15,12 +15,12 @@ QSYNC_Network = tcp
 QSYNC_Addr = 127.0.0.1:6379
 QSYNC_Username =
 QSYNC_Password =
-QSYNC_DB = 0            # 数据库
-QSYNC_DialTimeout = 5   # 连接超时控制, 单位: 秒
-QSYNC_ReadTimeout = 10   # 读取超时控制, 单位: 秒
-QSYNC_WriteTimeout = 10  # 写入超时控制, 单位: 秒
-QSYNC_PoolSize = 10     # 最多连接数
-QSYNC_Concurrency = 10  # 处理任务的最大并发数
+QSYNC_DB = 0                    # 数据库
+QSYNC_DialTimeout = 5           # 连接超时控制, 单位: 秒
+QSYNC_ReadTimeout = 10          # 读取超时控制, 单位: 秒
+QSYNC_WriteTimeout = 10         # 写入超时控制, 单位: 秒
+QSYNC_PoolSize = 10             # 最多连接数
+QSYNC_Concurrency = 10          # 处理任务的最大并发数
 
 # Mysql-localhost
 DB_CORE_RW_HOST = 127.0.0.1
