相同的redis连接使用同一个缓冲池

--- a/.env.development
+++ b/.env.development
@@ -30,6 +30,9 @@ DB_CORE_RW_USERNAME = root
 DB_CORE_RW_PASSWORD = password
 
 # Redis-localhost
-REDIS_LOCALHOST_RW_HOST=127.0.0.1
-REDIS_LOCALHOST_RW_PASSWORD=
-REDIS_LOCALHOST_RW_PORT=6379
+REDIS_LOCALHOST_RW_HOST = 127.0.0.1
+REDIS_LOCALHOST_RW_PASSWORD =
+REDIS_LOCALHOST_RW_PORT = 6379
+REDIS_LOCALHOST_POOL_SIZE = 20            # 最大连接数
+REDIS_LOCALHOST_MIN_IDLE_CONN = 10        # 最小空闲连接数
+REDIS_LOCALHOST_IDLE_TIMEOUT = 300        # 空闲时间，单位: 秒
