refactor: 简化pkg&引入ego工具包&重构启动方式

--- a/.env.development
+++ b/.env.development
@@ -12,7 +12,7 @@ GORM_SLOW_LOG_THRESHOLD = 100   # gorm慢日志记录阈值，单位为毫秒
 
 # 异步任务配置
 QSYNC_Network = tcp
-QSYNC_Addr = 127.0.0.1:6379
+QSYNC_Addr = 127.0.0.1:6379  # 使用docker时localhost须更改为host.docker.internal
 QSYNC_Username =
 QSYNC_Password =
 QSYNC_DB = 0                    # 数据库
@@ -23,13 +23,14 @@ QSYNC_PoolSize = 10             # 最多连接数
 QSYNC_Concurrency = 10          # 处理任务的最大并发数
 
 # Mysql-localhost
-DB_CORE_RW_HOST = 127.0.0.1
+DB_CORE_RW_HOST = 127.0.0.1  # 使用docker时localhost须更改为host.docker.internal
 DB_CORE_RW_PORT = 3306
+DB_CORE_RW_DATABASE = blog
 DB_CORE_RW_USERNAME = root
 DB_CORE_RW_PASSWORD = password
 
 # Redis-localhost
-REDIS_LOCALHOST_RW_HOST = 127.0.0.1
+REDIS_LOCALHOST_RW_HOST = 127.0.0.1  # 使用docker时localhost须更改为host.docker.internal
 REDIS_LOCALHOST_RW_PASSWORD =
 REDIS_LOCALHOST_RW_PORT = 6379
 REDIS_LOCALHOST_POOL_SIZE = 20            # 最大连接数
