refactor: 异步任务封装重构

--- a/.env.development
+++ b/.env.development
@@ -11,16 +11,16 @@ LOG_ENCODER_JSON = true         # 是否为josn日志格式
 GORM_SLOW_LOG_THRESHOLD = 100   # gorm慢日志记录阈值，单位为毫秒
 
 # 异步任务配置
-QSYNC_Network = tcp
-QSYNC_Addr = 127.0.0.1:6379  # 使用docker时localhost须更改为host.docker.internal
-QSYNC_Username =
-QSYNC_Password =
-QSYNC_DB = 0                    # 数据库
-QSYNC_DialTimeout = 5           # 连接超时控制, 单位: 秒
-QSYNC_ReadTimeout = 10          # 读取超时控制, 单位: 秒
-QSYNC_WriteTimeout = 10         # 写入超时控制, 单位: 秒
-QSYNC_PoolSize = 10             # 最多连接数
-QSYNC_Concurrency = 10          # 处理任务的最大并发数
+ASYNC_Network = tcp
+ASYNC_Addr = 127.0.0.1:6379  # 使用docker时localhost须更改为host.docker.internal
+ASYNC_Username =
+ASYNC_Password =
+ASYNC_DB = 0                    # 数据库
+ASYNC_DialTimeout = 5           # 连接超时控制, 单位: 秒
+ASYNC_ReadTimeout = 10          # 读取超时控制, 单位: 秒
+ASYNC_WriteTimeout = 10         # 写入超时控制, 单位: 秒
+ASYNC_PoolSize = 10             # 最多连接数
+ASYNC_Concurrency = 10          # 处理任务的最大并发数
 
 # Mysql-localhost
 DB_CORE_RW_HOST = 127.0.0.1  # 使用docker时localhost须更改为host.docker.internal
