refactor: ego包名重命名

--- a/.env.development
+++ b/.env.development
@@ -23,11 +23,11 @@ ASYNC_PoolSize = 10             # 最多连接数
 ASYNC_Concurrency = 10          # 处理任务的最大并发数
 
 # Mysql-localhost
-DB_CORE_RW_HOST = 127.0.0.1  # 使用docker时localhost须更改为host.docker.internal
-DB_CORE_RW_PORT = 3306
-DB_CORE_RW_DATABASE = blog
-DB_CORE_RW_USERNAME = root
-DB_CORE_RW_PASSWORD = password
+DB_LOCALHOST_RW_HOST = 127.0.0.1  # 使用docker时localhost须更改为host.docker.internal
+DB_LOCALHOST_RW_PORT = 3306
+DB_LOCALHOST_RW_DATABASE = blog
+DB_LOCALHOST_RW_USERNAME = root
+DB_LOCALHOST_RW_PASSWORD = password
 
 # Redis-localhost
 REDIS_LOCALHOST_RW_HOST = 127.0.0.1  # 使用docker时localhost须更改为host.docker.internal
@@ -36,3 +36,10 @@ REDIS_LOCALHOST_RW_PORT = 6379
 REDIS_LOCALHOST_POOL_SIZE = 20            # 最大连接数
 REDIS_LOCALHOST_MIN_IDLE_CONN = 10        # 最小空闲连接数
 REDIS_LOCALHOST_IDLE_TIMEOUT = 300        # 空闲时间，单位: 秒
+
+# Mongo-localhost
+MONGO_LOCALHOST_RW_HOST = 127.0.0.1
+MONGO_LOCALHOST_RW_PORT = 27017
+MONGO_LOCALHOST_RW_DATABASE = tenant
+MONGO_LOCALHOST_RW_USERNAME =
+MONGO_LOCALHOST_RW_PASSWORD =
